# HexGame

./: .gitignore  .pre-commit-config.yaml  README.md  compile.bat  constants.py  game.py  load_asset.py  main.py  mypy.ini  pyproject.toml  requirements.txt  restats  run_profile.py
.github/: dependabot.yml
.github/workflows/: ci.yml  code_quality.yaml  dependabot-auto-approve.yml
data/: map_data.py
error_saves/: 2023_05_21_12_06_03_error_trace.txt  2023_05_21_12_06_12_error_trace.txt  2023_05_21_12_06_34_error_trace.txt
logic/: __init__.py  armament.py  base_ship.py  cell.py  enemy.py  game_loop.py  grid.py  hex.py  hex_math.py  pathfinding.py  player.py  ship.py
pytest/: test_cell.py  test_coord.py  test_grid.py  test_grid_sprite.py  test_hex.py
sprites/: __init__.py  cell_sprite.py  enemy_sprite.py  grid.py  grid_sprite.py  planet_sprite.py  player_sprite.py  ship_sprite.py
steamworks/: __init__.py  enums.py  exceptions.py  methods.py  structs.py  util.py
steamworks/interfaces/: apps.py  friends.py  matchmaking.py  music.py  screenshots.py  users.py  userstats.py  utils.py  workshop.py
test/: fixtures.py  test_cell.py  test_coord.py  test_grid.py  test_hex.py  test_hex_math.py  test_pathfinding.py  test_ship.py
utilities/: __init__.py  achievements.py  control_configuration.py  error_handling.py  image_manipulation.py  opengl.py  spritesheet.py  ui_manager.py
